Attempting to fix the footer bug, not nesting within wrapping div correctly

--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -1,18 +1,25 @@
 <style>
 
-html, body {
+html {
   padding:0;
-  height:100%;
-  margin:0px 0px 0px 0px;
+  margin:0;
+}
+
+body {
+  padding:0;
+  margin:0;
 }
 
 .wrap {
+  width:980px;
   font-family:'Roboto', sans-serif;
   font-size:15px;
   background:radial-gradient(at 40% 40%, #4a98d3, #00598f);
   min-height:100%;
   position:relative;
   width:980px;
+  margin:0;
+  padding:0;
 }
 
 
@@ -144,8 +151,9 @@ td:not(#question) {
   padding:2px;
   border-radius: 5px;
   border:solid #c6c6c6;
-  background:#c6c6c6;
-  white-space:nowrap;
+  -->
+
+  
 }
 
 /*--------- STICKY FOOTER -----------*/
@@ -163,6 +171,7 @@ td:not(#question) {
 }
 
 .footerContents {
+  width:100%;
   margin:auto;
   position:relative;
   background:#fff;
